syntax = "proto3";

package ibanking.savings;

service SavingsService {
  rpc findById(FindByIdRequest) returns (Account);
  rpc findByUserId(FindByUserIdRequest) returns (FindByUserIdResponse);
  rpc create(CreateRequest) returns (Account);
  rpc deposit(DepositRequest) returns (Account);
  rpc withdrawal(WithdrawalRequest) returns (Account);
}

message FindByIdRequest {
  string id = 1;
}

message FindByUserIdRequest {
  SearchOptions search_options = 1;
  PageOptions page_options = 2;
}

message FindByUserIdResponse {
  repeated Account accounts = 1;
  int32 total_result = 2;
}

message CreateRequest {
  string user_id = 1;
}

message DepositRequest {
  string id = 1;
  int64 amount = 2;
}

message WithdrawalRequest {
  string id = 1;
  int64 amount = 2;
}

message Account {
  string id = 1;
  string user_id = 2;
  int64 amount = 3;
}

message PageOptions {
  int32 page = 1;
  int32 size = 2;
}

message SearchOptions {
  string user_id = 1;
}
